fix: ajustar vercel.json para sÃ³ redirecionar requisiÃ§Ãµes HTML para index.html

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,15 @@
 {
   "rewrites": [
     {
-      "source": "/((?!robots\\.txt|sitemap\\.xml|.*\\.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot|pdf|json|webmanifest|sw\\.js|workbox-.*\\.js|registerSW\\.js|assets/)).*)",
-      "destination": "/index.html"
+      "source": "/(.*)",
+      "destination": "/index.html",
+      "has": [
+        {
+          "type": "header",
+          "key": "accept",
+          "value": "text/html"
+        }
+      ]
     }
   ],
   "headers": [
