fix: usar rewrites explÃ­citos antes da regra geral para sitemap.xml e robots.txt

--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,16 @@
 {
-  "cleanUrls": true,
-  "trailingSlash": false,
   "rewrites": [
     {
-      "source": "/((?!robots\\.txt|sitemap\\.xml|.*\\.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot|pdf|json|webmanifest|sw\\.js|workbox-.*\\.js|registerSW\\.js|assets/)).*)",
+      "source": "/sitemap.xml",
+      "destination": "/sitemap.xml"
+    },
+    {
+      "source": "/robots.txt",
+      "destination": "/robots.txt"
+    },
+    {
+      "source": "/(.*)",
       "destination": "/index.html"
     }
   ]
 }
-
