feat: Melhorias na anÃ¡lise de compatibilidade com vaga e exportaÃ§Ã£o Word
- Melhorada extraÃ§Ã£o de palavras-chave com sinÃ´nimos e normalizaÃ§Ã£o
- Expandido banco de palavras-chave por Ã¡rea (tech, design, marketing, etc)
- Implementado cÃ¡lculo de score mais preciso com bÃ´nus para keywords importantes
- Adicionada anÃ¡lise de soft skills e formaÃ§Ã£o acadÃªmica
- Melhoradas sugestÃµes de melhoria com categorizaÃ§Ã£o e priorizaÃ§Ã£o
- Interface visual aprimorada com barra de progresso e estatÃ­sticas
- Corrigida exportaÃ§Ã£o Word com remoÃ§Ã£o de markdown e melhor organizaÃ§Ã£o
- Adicionado contador de palavras na descriÃ§Ã£o da vaga

--- a/package.json
+++ b/package.json
@@ -9,15 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^1.31.0",
+    "@types/dompurify": "^3.0.5",
     "docx": "^9.5.1",
+    "dompurify": "^3.3.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.4",
     "lucide-react": "^0.556.0",
-    "pdfjs-dist": "^5.4.449",
     "react": "^19.2.1",
-    "react-dom": "^19.2.1",
-    "tesseract.js": "^6.0.1"
+    "react-dom": "^19.2.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
