Corrigir configuração do ads.txt para ser encontrado pelo Google

--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,10 @@
       "destination": "/robots.txt"
     },
     {
+      "source": "/ads.txt",
+      "destination": "/ads.txt"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
