Melhorar configuração do ads.txt no Vercel e .htaccess

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,10 +1,18 @@
-# Configuração para servir robots.txt corretamente
+# Configuração para servir arquivos estáticos corretamente
 <IfModule mod_rewrite.c>
   RewriteEngine On
   
   # Garantir que robots.txt seja acessível
   RewriteCond %{REQUEST_URI} ^/robots\.txt$ [NC]
   RewriteRule ^robots\.txt$ /robots.txt [L]
+  
+  # Garantir que ads.txt seja acessível
+  RewriteCond %{REQUEST_URI} ^/ads\.txt$ [NC]
+  RewriteRule ^ads\.txt$ /ads.txt [L]
+  
+  # Garantir que sitemap.xml seja acessível
+  RewriteCond %{REQUEST_URI} ^/sitemap\.xml$ [NC]
+  RewriteRule ^sitemap\.xml$ /sitemap.xml [L]
   
   # Redirecionar para index.html para SPA (exceto arquivos estáticos)
   RewriteCond %{REQUEST_FILENAME} !-f
@@ -21,6 +29,12 @@
 # Headers para sitemap.xml
 <Files "sitemap.xml">
   Header set Content-Type "application/xml; charset=utf-8"
+  Header set Cache-Control "public, max-age=86400"
+</Files>
+
+# Headers para ads.txt
+<Files "ads.txt">
+  Header set Content-Type "text/plain; charset=utf-8"
   Header set Cache-Control "public, max-age=86400"
 </Files>
 
